src/test/ui/parser/keyword-else-as-identifier.stderr
error: expected pattern, found keyword `else`
  --> $DIR/keyword-else-as-identifier.rs:4:9
   |
LL |     let else = "foo"; //~ error: expected pattern, found keyword `else`
   |         ^^^^ expected pattern

error: aborting due to previous error

